6 library after custody was taken over by David Griffith.  This release 
focuses mainly on bugs reported at 
http://www.inform-fiction.org/patches/library.html.



New things added in Release 6/12
================================

There is now a Global no_infer_message which can be used in the 
ChooseObjects() routine to suppress an inference message for a 
particular match.


Issues addressed in Release 6/12 (12????)
=========================================
Issue L61101
each_turn property causes runtime error.
Problem: An each_turn property with both a local routine and a routine 
inherited from a Class causes a runtime error in Strict mode.
Status: Fixed

Issue L61102
GET IN now matches Compass object
Adding "in_obj.&name-->0 = '.ignore';" to Initialise() reverts back to 
the previous behavior.  
Status: Maybe fix?

Issue L61105
'Game uses colour' bit is always set.
Problem: Every game compiled with the 6/11 library has the 'game uses 
colour' bit set in the Flags2 header word.
Fixed: From now on, if you want a game to use color, add "Constant 
COLOUR;" or "Constant COLOR;" to the beginning of your code.
Status: Fixed

Issue L61106
Improvement to LibraryExtensions.RunUntil
Problem: The LibraryExtensions.RunUntil property (new at 6/11 and not 
currently used by the library) should return simply true or false if it 
does nothing.
Status: Fixed

Issue L61107
(The) with 'proper' should capitalise object name
Problem: In the case of an object with the 'proper' attribute and a 
lower-case name (such as "your nose", "your corduroy trousers", "your 
mother's purse"), the (The) print rule should capitalise the first 
letter of the object name, so that library messages such as (The) x1, " 
", (isorare) x1, " empty." correctly produce "Your mother's purse is 
empty."
Status: Fixed

Issue L61108
indef_mode not restored
Problem: When printing an object with the proper attribute, the 
functions IndefArt( ) and CIndefArt( ) temporarily modify -- but do not 